@@ -12,6 +12,8 @@ What's New in Python 2.4 alpha 1?
 Core and builtins
 -----------------
 
+- Moved tracebackobject into traceback.h and renamed to PyTracebackObject
+
 - Optimized the byte coding for multiple assignments like "a,b=b,a" and
   "a,b,c=1,2,3".  Improves their speed by 25% to 30%.
 
